# ML-sigmoid-neuron

./: .gitignore  README.md  README_Backpropagation.md
data/: create_dataset.py  digits_images.csv  mnist_importer.py  mnist_train_y.csv
docs/: Doxyfile
docs/html/: _form0_dark_tmp.ps  _form0_tmp.epsi  _form0_tmp.ps  _form1_dark_tmp.ps  _form1_tmp.ps  _form2_dark_tmp.ps  _form2_tmp.ps  _form3_dark_tmp.ps  _form3_tmp.ps  annotated.html  annotated_dup.js  class_neuron-members.html  class_neuron.html  class_neuron.js  class_neuron__inherit__graph.map  class_neuron__inherit__graph.md5  class_neuron_layer-members.html  class_neuron_layer.html  class_neuron_layer.js  class_neuron_network-members.html  class_neuron_network.html  class_neuron_network.js  class_output_nueron-members.html  class_output_nueron.html  class_output_nueron__coll__graph.map  class_output_nueron__coll__graph.md5  classes.html  classimport_01numpy_01as_01np_1_1_neural_network-members.html  classimport_01numpy_01as_01np_1_1_neural_network.html  classimport_01numpy_01as_01np_1_1_neuron-members.html  classimport_01numpy_01as_01np_1_1_neuron.html  common_8hpp.html  common_8hpp.js  common_8hpp__dep__incl.map  common_8hpp__dep__incl.md5  common_8hpp__incl.map  common_8hpp__incl.md5  common_8hpp_source.html  create__dataset_8py.html  create__dataset_8py.js  (+159 more)
docs/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_e.js  pages_0.js  pages_1.js  (+3 more)
docs/latex/: annotated.tex  class_neuron.tex  class_neuron__inherit__graph.md5  class_neuron_layer.tex  class_neuron_network.tex  class_output_nueron.tex  class_output_nueron__inherit__graph.md5  classimport_01numpy_01as_01np_1_1_neural_network.tex  classimport_01numpy_01as_01np_1_1_neuron.tex  common_8hpp.tex  common_8hpp__dep__incl.md5  common_8hpp__incl.md5  common_8hpp_source.tex  create__dataset_8py.tex  create__dataset_8py_source.tex  csv__reader_8hpp.tex  csv__reader_8hpp__dep__incl.md5  csv__reader_8hpp__incl.md5  csv__reader_8hpp_source.tex  files.tex  hierarchy.tex  import_01numpy_01as_01np_8py_source.tex  index.tex  md__2_users_2stanislav_2_github_2_h_u-_a_i-year2_2_machine_learning_2_m_l-sigmoid-neuron_2_r_e_a_d_m_e___backpropagation.tex  md__machine_learning_2_m_l-sigmoid-neuron_2_r_e_a_d_m_e___backpropagation.tex  mnist__importer_8py.tex  mnist__importer_8py_source.tex  neuron_8cpp.tex  neuron_8cpp__incl.md5  neuron_8cpp_source.tex  neuron_8hpp.tex  neuron_8hpp__dep__incl.md5  neuron_8hpp__incl.md5  neuron_8hpp_source.tex  neuron_layer_8cpp.tex  neuron_layer_8cpp__incl.md5  neuron_layer_8cpp_source.tex  neuron_layer_8hpp.tex  neuron_layer_8hpp__dep__incl.md5  neuron_layer_8hpp__incl.md5  (+32 more)
docs/performance_analysis/: perf_analysis.tex  references.bib
src/: neuron.cpp  neuronLayer.cpp  neuronNetwork.cpp
src/header/: common.hpp  csv_reader.hpp  neuron.hpp  neuronLayer.hpp  neuronNetwork.hpp  outputNeuron.hpp  progressbar.hpp
src/test/: CMakeLists.txt  test.cpp
src/testBackpropagation/: CMakeLists.txt  testBackpropagation.cpp
